--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.b3bdb997.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.0ea1c9d7.js">
-    <link rel="stylesheet" href="/assets/index.a9c7407d.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Lan-Transfer</title>
+		<script type="module" crossorigin src="/assets/index.3a82a4d7.js"></script>
+		<link rel="modulepreload" href="/assets/vendor.6b7fe2e5.js">
+		<link rel="stylesheet" href="/assets/index.6d628d15.css">
+	</head>
+	<body>
+		<div id="app"></div>
+		
+	</body>
 </html>
